テキストを変更

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           音楽の楽しさを簡単に。
         </div>
         <div class="free-text">
-          厳選された音楽から聴きたい曲が見つかる。<br>
+          厳選された音楽から聴きたい曲が見つかるかも。<br>
           最新楽曲情報をすぐさまチェック<br>
           音楽イベント情報を配信。
         </div>
